# Simple_Logger

./: .travis.yml  CMakeLists.txt  Logger.cpp  Logger.h  Makefile
Test/: AllTests.cpp  CMakeLists.txt
Test/Utest/: TestLogger.cpp
Test/logger_ut/: CMakeLists.txt  logger_ut.cpp
src/: CMakeLists.txt  example.cpp  logger.cpp  main.cpp
src/lib/: Logger.cpp  Logger.h
